Persist job applications
